Fixed background color behind buttons

--- a/connect4/pub/style.css
+++ b/connect4/pub/style.css
@@ -52,12 +52,3 @@
 .black {
     background-color: black;
 }
-
-.disable {
-    background-color: red;
-}
-
-.enable {
-    display: block;
-    background-color: green;
-}
